--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 appdirs==1.4.3
+bitcoin==1.1.42
 click==6.7
+ethereum==1.0.8
+ethjsonrpc==0.3.0
 Flask==0.12.1
 gevent==1.2.1
 greenlet==0.4.12
@@ -7,7 +10,19 @@ gunicorn==19.7.1
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
+netifaces==0.10.5
 packaging==16.8
+pbkdf2==1.3
+py-solc==1.0.1
+pycryptodome==3.4.5
+pyethash==0.1.27
 pyparsing==2.2.0
+pysha3==1.0.2
+pywemo==0.4.16
+PyYAML==3.12
+repoze.lru==0.6
+requests==2.9.1
+rlp==0.4.4
+scrypt==0.8.0
 six==1.10.0
 Werkzeug==0.12.1
